--- a/beauty-project2/tra/src/main/webapp/tpl/tra/hunan_information_service.employee.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/hunan_information_service.employee.html
@@ -30,23 +30,23 @@
                         </thead>
                         <tbody>
                             <tr ng-repeat="info in sslyzgl_ygxxb">
-                                <td></td><!--人员姓名-->
-                                <td></td><!--人员性别-->
-                                <td></td><!--出生日期-->
-                                <td></td><!--身份证号-->
-                                <td></td><!--民族-->
+                                <td>{{info.name}}</td><!--人员姓名-->
+                                <td>{{info.sex}}</td><!--人员性别-->
+                                <td>{{info.birthday}}</td><!--出生日期-->
+                                <td>{{info.cardno}}</td><!--身份证号-->
+                                <td>{{info.nation}}</td><!--民族-->
                                 <td></td><!--籍贯-->
-                                <td></td><!--联系电话-->
-                                <td></td><!--联系地址-->
-                                <td></td><!--电子邮件-->
+                                <td>{{info.phone}}</td><!--联系电话-->
+                                <td>{{info.address}}</td><!--联系地址-->
+                                <td>{{info.email}}</td><!--电子邮件-->
                                 <td></td><!--邮政编码-->
-                                <td></td><!--文化程度-->
-                                <td></td><!--技术等级-->
-                                <td></td><!--健康状况-->
-                                <td></td><!--从业状态-->
+                                <td>{{info.enducation}}</td><!--文化程度-->
+                                <td>{{info.techlevel}}</td><!--技术等级-->
+                                <td>{{innfo.health}}</td><!--健康状况-->
+                                <td>{{info.worstatus}}</td><!--从业状态-->
                                 <td></td><!--驾驶证号-->
                                 <td></td><!--准驾车型-->
-                                <td></td><!--驾驶证初领时间-->
+                                <td>{{info.driverFirstdate}}</td><!--驾驶证初领时间-->
                                 <td></td><!--从业资格证号-->
                                 <td></td><!--从业资格类别-->
                                 <td></td><!--核发日期-->
@@ -60,18 +60,18 @@
                                 <td></td><!--档案号-->
                                 <td></td><!--考生区域-->
                                 <td></td><!--从业资格范围-->
-                                <td></td><!--时间戳-->
-                                <td></td><!--修改时间-->
-                                <td></td><!--修改日期-->
-                                <td></td><!--修改人-->
-                                <td></td><!--创建时间-->
-                                <td></td><!--创建日期-->
-                                <td></td><!--创建人-->
-                                <td></td><!--是否有效-->
+                                <td>{{innfo.insertDate}}</td><!--时间戳-->
+                                <td>{{info.editime}}</td><!--修改时间-->
+                                <td>{{info.edidate}}</td><!--修改日期-->
+                                <td>{{info.ediusrcode}}</td><!--修改人-->
+                                <td>{{info.cretime}}</td><!--创建时间-->
+                                <td>{{info.credate}}</td><!--创建日期-->
+                                <td>{{info.creusrcode}}</td><!--创建人-->
+                                <td>{{infoiseffect}}</td><!--是否有效-->
                                 <td></td><!--职位-->
-                                <td></td><!--考核年度-->
-                                <td></td><!--考核等级-->
-                                <td></td><!--考核状态-->
+                                <td>{{info.reportYear}}</td><!--考核年度-->
+                                <td>{{info.reportLevel}}</td><!--考核等级-->
+                                <td>{{info.reportStatus}}</td><!--考核状态-->
                             </tr>
                         </tbody>
                     </table>
