--- a/beauty-project2/tra/src/main/webapp/tpl/tra/throughputNextLevel.management.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/throughputNextLevel.management.html
@@ -20,18 +20,18 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr  ng-repeat="k in sslyzgl_qyczry">
-                  <td></td><!--人员编号-->
-                  <td></td><!--所在企业编号-->
-                  <td></td><!--操作者名-->
-                  <td></td><!--密码-->
-                  <td></td><!--创建时间-->
-                  <td></td><!--帐号状态-->
-                  <td></td><!--最近修改密码时间-->
-                  <td></td><!--联系电话-->
+                <tr  ng-repeat="info in sslyzgl_qyczry">
+                  <td>{{info.userNo}}</td><!--人员编号-->
+                  <td>{{info.enterpriseNo}}</td><!--所在企业编号-->
+                  <td>{{info.userName}}</td><!--操作者名-->
+                  <td>{{info.userPassword}}</td><!--密码-->
+                  <td>{{info.userCreatedate}}</td><!--创建时间-->
+                  <td>{{info.userStatus}}</td><!--帐号状态-->
+                  <td>{{info.userChangepswdate}}</td><!--最近修改密码时间-->
+                  <td>{{info.userMobile}}</td><!--联系电话-->
                   <td></td><!--操作权限-->
-                  <td></td><!--申请口令校验码-->
-                  <td></td><!--注销日期-->
+                  <td>{{info.userVerifycode}}</td><!--申请口令校验码-->
+                  <td>{{info.unregisterDate}}</td><!--注销日期-->
                 </tr>
                 </tbody>
               </table>
@@ -42,13 +42,13 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr  ng-repeat="k in sslyzgl_xzgljg">
-                  <td></td><!--机构编码-->
-                  <td></td><!--机构全称-->
-                  <td></td><!--机构所在行政区划名称-->
-                  <td></td><!--机构负责人姓名-->
-                  <td></td><!--部门负责人-->
-                  <td></td><!--填报人姓名-->
+                <tr  ng-repeat="info in sslyzgl_xzgljg">
+                  <td>{{info.unitNo}}</td><!--机构编码-->
+                  <td>{{info.unitName}}</td><!--机构全称-->
+                  <td>{{info.unitXzqhname}}</td><!--机构所在行政区划名称-->
+                  <td>{{info.unitBranchmanage}}</td><!--机构负责人姓名-->
+                  <td>{{info.unitManager}}</td><!--部门负责人-->
+                  <td>{{info.unitReporter}}</td><!--填报人姓名-->
                   <td></td><!--联系电话-->
                 </tr>
                 </tbody>
@@ -60,19 +60,19 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr  ng-repeat="(index,k) in sslyzgl_xzglry">
-                  <td></td><!--人员编码-->
-                  <td></td><!--用户所在机构编码-->
-                  <td></td><!--操作者名-->
+                <tr  ng-repeat="(index,info) in sslyzgl_xzglry">
+                  <td>{{info.userNo}}</td><!--人员编码-->
+                  <td>{{info.unitNo}}</td><!--用户所在机构编码-->
+                  <td>{{info.userName}}</td><!--操作者名-->
                   <td></td><!--操作口令-->
-                  <td></td><!--创建时间-->
-                  <td></td><!--帐号状态-->
-                  <td></td><!--最近修改密码时间-->
+                  <td>{{info.userCreatedate}}</td><!--创建时间-->
+                  <td>{{info.userStatus}}</td><!--帐号状态-->
+                  <td>{{info.userChangepswdate}}</td><!--最近修改密码时间-->
 
                   <td></td><!--联系电话-->
                   <td></td><!--操作权限-->
                   <td></td><!--申请口令校验码的MD5-->
-                  <td></td><!--注销日期-->
+                  <td>{{info.unregisterDate}}</td><!--注销日期-->
                 </tr>
                 </tbody>
               </table>
